--- a/tasks.json
+++ b/tasks.json
@@ -4,9 +4,9 @@
     "description": "This is a test",
     "is_done": false,
     "is_active": false,
-    "is_selected": true,
+    "is_selected": false,
     "elapsed_time": {
-      "secs": 5,
+      "secs": 500,
       "nanos": 0
     },
     "created_on": "2022-12-10T10:38:12.168047900Z"
@@ -18,9 +18,33 @@
     "is_active": false,
     "is_selected": false,
     "elapsed_time": {
-      "secs": 5,
+      "secs": 3600,
       "nanos": 0
     },
     "created_on": "2022-12-10T10:49:16.281497100Z"
+  },
+  {
+    "title": "test",
+    "description": "This is a test",
+    "is_done": true,
+    "is_active": false,
+    "is_selected": true,
+    "elapsed_time": {
+      "secs": 97,
+      "nanos": 529703200
+    },
+    "created_on": "2022-12-11T21:40:07.597398100Z"
+  },
+  {
+    "title": "test",
+    "description": "This is a test",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 678243,
+      "nanos": 0
+    },
+    "created_on": "2022-12-11T21:40:07.769329800Z"
   }
 ]
