--- a/tasks.json
+++ b/tasks.json
@@ -4,7 +4,7 @@
     "description": "This is a photgraph, a window to the past. Therefore we should send an email to them to let them know",
     "is_done": false,
     "is_active": false,
-    "is_selected": false,
+    "is_selected": true,
     "elapsed_time": {
       "secs": 500,
       "nanos": 0
@@ -13,10 +13,10 @@
   },
   {
     "title": "test",
-    "description": "This is not a test",
+    "description": "This is a test of Spanish, éáíóú",
     "is_done": false,
     "is_active": false,
-    "is_selected": true,
+    "is_selected": false,
     "elapsed_time": {
       "secs": 3600,
       "nanos": 0
