Blinking cursor implemented, but performance is shit

--- a/tasks.json
+++ b/tasks.json
@@ -1,7 +1,7 @@
 [
   {
     "title": "test",
-    "description": "This is a photograph, a window to the past.\nSo let's try to send them a note shall we?\n\nI have now managed to introduce a blinking cursor.",
+    "description": "This is a test: This is a photograph, a window to the past.\nSo let's try to send them a note shall we?\n\nI have now managed to introduce a motherflippin blinking cursor. Well here we go.",
     "is_done": false,
     "is_active": false,
     "is_selected": true,
