--- a/tasks.json
+++ b/tasks.json
@@ -1,7 +1,7 @@
 [
   {
     "title": "test",
-    "description": "This one is actually a test. Succes!",
+    "description": "This one is actually a test. Succes! Although there are a few problems.\nHowever I have managed to sort the newline issue.",
     "is_done": false,
     "is_active": false,
     "is_selected": true,
