--- a/tasks.json
+++ b/tasks.json
@@ -1,8 +1,8 @@
 [
   {
-    "title": "test",
-    "description": "This is the one\nThis is the two",
-    "is_done": false,
+    "title": "Change title of tasks",
+    "description": "For a while there what I changed the description.\n\nWhat the fuck are we watching?",
+    "is_done": true,
     "is_active": false,
     "is_selected": true,
     "elapsed_time": {
@@ -12,8 +12,8 @@
     "created_on": "2022-12-10T10:38:12.168047900Z"
   },
   {
-    "title": "test",
-    "description": "This is the first line.\nThis is the second line.",
+    "title": "What?",
+    "description": "This is the first line.",
     "is_done": false,
     "is_active": false,
     "is_selected": false,
@@ -46,5 +46,17 @@
       "nanos": 0
     },
     "created_on": "2022-12-11T21:40:07.769329800Z"
+  },
+  {
+    "title": "test",
+    "description": "This is a test",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 5,
+      "nanos": 0
+    },
+    "created_on": "2022-12-16T21:20:23.677494Z"
   }
 ]
