--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "todo_app"
+name = "todo_rust"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,6 +8,5 @@ crossterm = { version = "0.19", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
-rand = { version = "0.7.3", default-features = false, features = ["std"] }
 tui = { version = "0.14", default-features = false, features = ["crossterm", "serde"] }
 thiserror = "1.0"
