--- a/tasks.json
+++ b/tasks.json
@@ -1,62 +1,26 @@
 [
   {
-    "title": "Change title of tasks",
-    "description": "For a while there what I changed the description.\n\nWhat the fuck are we watching?",
-    "is_done": true,
+    "title": "Implement deletion of tasks\n",
+    "description": "Implement the ability to delete tasks upon pressing the 'd' key.",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 0,
+      "nanos": 0
+    },
+    "created_on": "2022-12-18T10:15:11.761102Z"
+  },
+  {
+    "title": "Cursor behaviour",
+    "description": "Implement all normal cursor behaviour:\n - Going back and forward through the command line.\n - Going up and down lines.\n - At end/beginning of lines, go to the end/beginning of line.",
+    "is_done": false,
     "is_active": false,
     "is_selected": true,
     "elapsed_time": {
-      "secs": 500,
+      "secs": 0,
       "nanos": 0
     },
-    "created_on": "2022-12-10T10:38:12.168047900Z"
-  },
-  {
-    "title": "What?",
-    "description": "This is the first line.",
-    "is_done": false,
-    "is_active": false,
-    "is_selected": false,
-    "elapsed_time": {
-      "secs": 3600,
-      "nanos": 0
-    },
-    "created_on": "2022-12-10T10:49:16.281497100Z"
-  },
-  {
-    "title": "test",
-    "description": "This is a test let's go again",
-    "is_done": false,
-    "is_active": false,
-    "is_selected": false,
-    "elapsed_time": {
-      "secs": 102,
-      "nanos": 717680500
-    },
-    "created_on": "2022-12-11T21:40:07.597398100Z"
-  },
-  {
-    "title": "test",
-    "description": "This is a test",
-    "is_done": false,
-    "is_active": false,
-    "is_selected": false,
-    "elapsed_time": {
-      "secs": 678243,
-      "nanos": 0
-    },
-    "created_on": "2022-12-11T21:40:07.769329800Z"
-  },
-  {
-    "title": "test",
-    "description": "This is a test",
-    "is_done": false,
-    "is_active": false,
-    "is_selected": false,
-    "elapsed_time": {
-      "secs": 5,
-      "nanos": 0
-    },
-    "created_on": "2022-12-16T21:20:23.677494Z"
+    "created_on": "2022-12-18T10:16:00.758822Z"
   }
 ]
