--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "is_horizontal": true,
   "default": {
-    "fg": "White",
+    "fg": "Yellow",
     "bg": "Black",
     "add_modifier": {
       "bits": 0
@@ -11,8 +11,8 @@
     }
   },
   "highlight": {
-    "fg": "Blue",
-    "bg": "White",
+    "fg": "Gray",
+    "bg": "DarkGray",
     "add_modifier": {
       "bits": 0
     },
@@ -21,7 +21,7 @@
     }
   },
   "active_normal": {
-    "fg": "Green",
+    "fg": "Cyan",
     "bg": "Black",
     "add_modifier": {
       "bits": 0
@@ -31,8 +31,8 @@
     }
   },
   "active_highlight": {
-    "fg": "Green",
-    "bg": "White",
+    "fg": "Cyan",
+    "bg": "DarkGray",
     "add_modifier": {
       "bits": 0
     },
@@ -50,10 +50,10 @@
       "bits": 0
     }
   },
-  "normal_fg_colour": "White",
+  "normal_fg_colour": "Yellow",
   "normal_bg_colour": "Black",
-  "select_fg_colour": "Blue",
-  "select_bg_colour": "White",
-  "active_fg_colour": "Green",
+  "select_fg_colour": "Gray",
+  "select_bg_colour": "DarkGray",
+  "active_fg_colour": "Cyan",
   "title_fg_colour": "Cyan"
 }
