--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "is_horizontal": true,
   "default": {
-    "fg": "Yellow",
+    "fg": "Gray",
     "bg": "Black",
     "add_modifier": {
       "bits": 0
@@ -11,8 +11,8 @@
     }
   },
   "highlight": {
-    "fg": "Gray",
-    "bg": "DarkGray",
+    "fg": "Black",
+    "bg": "Yellow",
     "add_modifier": {
       "bits": 0
     },
@@ -21,7 +21,7 @@
     }
   },
   "active_normal": {
-    "fg": "Cyan",
+    "fg": "White",
     "bg": "Black",
     "add_modifier": {
       "bits": 0
@@ -31,8 +31,8 @@
     }
   },
   "active_highlight": {
-    "fg": "Cyan",
-    "bg": "DarkGray",
+    "fg": "White",
+    "bg": "Yellow",
     "add_modifier": {
       "bits": 0
     },
@@ -50,10 +50,21 @@
       "bits": 0
     }
   },
-  "normal_fg_colour": "Yellow",
+  "border": {
+    "fg": "Cyan",
+    "bg": "Black",
+    "add_modifier": {
+      "bits": 0
+    },
+    "sub_modifier": {
+      "bits": 0
+    }
+  },
+  "normal_fg_colour": "Gray",
   "normal_bg_colour": "Black",
-  "select_fg_colour": "Gray",
-  "select_bg_colour": "DarkGray",
-  "active_fg_colour": "Cyan",
-  "title_fg_colour": "Cyan"
+  "select_fg_colour": "Black",
+  "select_bg_colour": "Yellow",
+  "active_fg_colour": "White",
+  "title_fg_colour": "Cyan",
+  "border_colour": "Cyan"
 }
