--- a/tasks_backup.json
+++ b/tasks_backup.json
@@ -4,7 +4,7 @@
     "description": "Implement the ability to delete tasks upon pressing the 'd' key.",
     "is_done": true,
     "is_active": false,
-    "is_selected": true,
+    "is_selected": false,
     "elapsed_time": {
       "secs": 9,
       "nanos": 713170112
@@ -30,8 +30,8 @@
     "is_active": true,
     "is_selected": false,
     "elapsed_time": {
-      "secs": 594,
-      "nanos": 924978914
+      "secs": 687,
+      "nanos": 273452103
     },
     "created_on": "2022-12-18T20:39:04.050892Z"
   },
@@ -48,7 +48,7 @@
     "created_on": "2022-12-19T08:47:46.797634100Z"
   },
   {
-    "title": "Settings page",
+    "title": "Settings page\n",
     "description": "A settings page with the ability to change the colour schemes, the layout between vertical and horizontal split. Remember to put an example at the bottom of it.",
     "is_done": true,
     "is_active": false,
@@ -90,8 +90,8 @@
     "is_active": false,
     "is_selected": false,
     "elapsed_time": {
-      "secs": 0,
-      "nanos": 0
+      "secs": 30,
+      "nanos": 38617110
     },
     "created_on": "2022-12-25T06:56:57.717862Z"
   },
@@ -118,5 +118,29 @@
       "nanos": 0
     },
     "created_on": "2022-12-25T06:59:14.588001Z"
+  },
+  {
+    "title": "Navigate archived tasks\n",
+    "description": "With cursor keys and 'h'/'l' you should be able to navigate the archives of tasks.",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 0,
+      "nanos": 0
+    },
+    "created_on": "2023-01-02T18:15:26.388751Z"
+  },
+  {
+    "title": "Scrolling taks",
+    "description": "For now there are few tasks, but probably as they pile up we will need to scroll through them somehow.",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": true,
+    "elapsed_time": {
+      "secs": 0,
+      "nanos": 0
+    },
+    "created_on": "2023-01-02T18:16:04.496013Z"
   }
 ]
