--- a/tasks.json
+++ b/tasks.json
@@ -1,38 +1,14 @@
 [
   {
-    "title": "Reordering tasks in the active tasks page",
-    "description": "Pretty self explanatory.",
-    "is_done": true,
+    "title": "Beautify interface",
+    "description": "Pop up could use some work.",
+    "is_done": false,
     "is_active": false,
     "is_selected": true,
     "elapsed_time": {
-      "secs": 458,
-      "nanos": 691220818
+      "secs": 0,
+      "nanos": 0
     },
-    "created_on": "2022-12-25T06:59:14.588001Z"
-  },
-  {
-    "title": "Refactor rendering functions",
-    "description": "The render functions contain the same basic code repeated because it was simpler, it can be massively simplified. In doing so, the pop up should be easier to implement.",
-    "is_done": false,
-    "is_active": true,
-    "is_selected": false,
-    "elapsed_time": {
-      "secs": 197,
-      "nanos": 352882900
-    },
-    "created_on": "2023-01-03T15:02:00.713053800Z"
-  },
-  {
-    "title": "Pop up for adding/editing a task",
-    "description": "At the moment tasks are added by directly editing the description and title in the display box. However it would be better to introduce a pop up for editing and adding.",
-    "is_done": false,
-    "is_active": false,
-    "is_selected": false,
-    "elapsed_time": {
-      "secs": 99,
-      "nanos": 927698789
-    },
-    "created_on": "2022-12-19T08:47:46.797634100Z"
+    "created_on": "2023-01-05T06:54:40.863530Z"
   }
 ]
