Implemented popup for archiving tasks

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,14 @@
-[]
+[
+  {
+    "title": "Scrollable tasks",
+    "description": "Turns out than on my dev computers the screen real state is biiiiiig. But on other screens we can only get so much on it, so scrollable tasks is a must.",
+    "is_done": false,
+    "is_active": true,
+    "is_selected": true,
+    "elapsed_time": {
+      "secs": 48,
+      "nanos": 79773036
+    },
+    "created_on": "2023-01-08T10:29:44.803707Z"
+  }
+]
