Correct scroll behaviour

--- a/tasks.json
+++ b/tasks.json
@@ -4,7 +4,7 @@
     "description": "",
     "is_done": false,
     "is_active": false,
-    "is_selected": false,
+    "is_selected": true,
     "elapsed_time": {
       "secs": 0,
       "nanos": 0
@@ -40,7 +40,7 @@
     "description": "",
     "is_done": false,
     "is_active": false,
-    "is_selected": true,
+    "is_selected": false,
     "elapsed_time": {
       "secs": 0,
       "nanos": 0
@@ -58,5 +58,101 @@
       "nanos": 0
     },
     "created_on": "2023-01-10T07:22:59.590387Z"
+  },
+  {
+    "title": "Test 6",
+    "description": "",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 0,
+      "nanos": 0
+    },
+    "created_on": "2023-01-10T07:22:59.590387Z"
+  },
+  {
+    "title": "Test 7",
+    "description": "",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 0,
+      "nanos": 0
+    },
+    "created_on": "2023-01-10T07:22:59.590387Z"
+  },
+  {
+    "title": "Test 8",
+    "description": "",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 0,
+      "nanos": 0
+    },
+    "created_on": "2023-01-10T07:22:59.590387Z"
+  },
+  {
+    "title": "Test 9",
+    "description": "",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 0,
+      "nanos": 0
+    },
+    "created_on": "2023-01-10T07:22:59.590387Z"
+  },
+  {
+    "title": "Test 10",
+    "description": "",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 0,
+      "nanos": 0
+    },
+    "created_on": "2023-01-10T07:22:59.590387Z"
+  },
+  {
+    "title": "Test 11",
+    "description": "",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 0,
+      "nanos": 0
+    },
+    "created_on": "2023-01-10T07:22:59.590387Z"
+  },
+  {
+    "title": "Test 12",
+    "description": "",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 0,
+      "nanos": 0
+    },
+    "created_on": "2023-01-10T07:22:59.590387Z"
+  },
+  {
+    "title": "Test 13",
+    "description": "N/A",
+    "is_done": false,
+    "is_active": false,
+    "is_selected": false,
+    "elapsed_time": {
+      "secs": 0,
+      "nanos": 0
+    },
+    "created_on": "2023-07-10T17:58:59.641295Z"
   }
 ]
